--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,12 @@ header {
   background-size: cover !important;
 	-webkit-background-size: cover !important;
 }
+
+.portfolio-modal {
+  padding:25px;
+  height:100%;
+  display:flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items:center;
+}
