--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,12 @@ header {
   justify-content: space-between;
   align-items:center;
 }
+
+.react-pdf__Page__canvas {
+  margin: 0 auto;
+  max-width: 100vw;
+  max-height: 141vw;
+  -webkit-box-shadow: 8px 14px 24px 12px rgba(199,191,199,1);
+  -moz-box-shadow: 8px 14px 24px 12px rgba(199,191,199,1);
+  box-shadow: 8px 14px 24px 12px rgba(199,191,199,1);
+}
