--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 header {
-  background: #161415 url(./header.jpg) no-repeat top center;
+  background: white /*url(./header.jpg)*/ no-repeat top center;
   background-size: cover !important;
 	-webkit-background-size: cover !important;
 }
