--- a/docs/css/media-queries.css
+++ b/docs/css/media-queries.css
@@ -16,7 +16,7 @@
    header .banner-text h1 {
       font: 80px/1.1em 'opensans-bold', sans-serif;
       letter-spacing: -1px;
-      margin: 0 auto 12px auto;
+      /* margin: 0 auto 12px auto; */
    }
 
 }
@@ -108,7 +108,8 @@
       top: 0;
       right: 0;
    }
-   #nav-wrap > a {
+  
+   #nav-wrap > div {
 	   width: 48px;
 		height: 48px;
 		text-align: left;
@@ -126,8 +127,8 @@
       right: 30px;
    }
 
-	#nav-wrap > a:before,
-   #nav-wrap > a:after {
+	#nav-wrap > div:before,
+   #nav-wrap > div:after {
 	   position: absolute;
 		border: 2px solid #fff;
 		top: 35%;
@@ -135,7 +136,7 @@
 		right: 25%;
 		content: '';
 	}
-   #nav-wrap > a:after { top: 60%; }
+   #nav-wrap > div:after { top: 60%; }
 
    /* toggle buttons */
 	#nav-wrap:not( :target ) > a:first-of-type,
@@ -146,7 +147,6 @@
    /* hide menu panel */
    #nav-wrap ul#nav {
       height: auto;
-		display: none;
       clear: both;
       width: auto; 
       float: right;     
@@ -164,7 +164,9 @@
       margin: 0 30px;
       clear: both;
    }
-
+   #nav-wrap ul.hider {
+      display: none !important;
+   }
    ul#nav li {
       display: block;
       height: auto;      
@@ -194,7 +196,7 @@
    header .banner-text h1 { font: 68px/1.1em 'opensans-bold', sans-serif; }
    header .banner-text h3 {
       font: 16px/1.9em 'librebaskerville-regular', serif;
-      width: 85%;
+      width: 80%;
    }
    header .banner-text hr {
       width: 80%;
@@ -335,7 +337,6 @@
       line-height: 54px;
    }
 
-
 }
 
 /* mobile narrow
@@ -352,11 +353,11 @@
    header .banner { padding-top: 24px; }
    header .banner-text h1 {
       font: 40px/1.1em 'opensans-bold', sans-serif;      
-      margin: 0 auto 24px auto;
+      /* margin: 0 auto 24px auto; */
    }
    header .banner-text h3 {
       font: 14px/1.9em 'librebaskerville-regular', sans-serif;
-      width: 90%;
+      width: 80%;
    }
   
    /* header social links */
